v2/two-factor.mdx
---
title: Two Factor Authentication
description: Secure administrator accounts with two-factor authentication
---

Secure your account with two-step authentication
Two-step authentication (also known as two-factor authentication or multifactor authentication) provides a more secure login process. When you attempt to sign in, you need to complete two separate steps:

- Enter the account password.
- Authenticate through a mobile app security key.

These two steps will make much more difficult for an unauthorized person to access your account.
Even if they are able to find your password, they will not be able to connect without the second step.
Authentication in two secure steps rests on the combination of two factors, which can be something you
know (such as your combination of connection and password), something you have (such as a code to Only one
use provided by an authentication application or SMS) or something you are (providing biometric authentication, such as a fingerprint).

Two-step authentication can be configured for all accounts, but the store owner can not activate it for staff.
The staff must put it in place for his own accounts. If you have multiple employees who manage your shop.

## Configuration

Two-factor authentication must be enabled in your configuration before the feature becomes available in the UI.
In the `config/shopper/auth.php` file, set the `2fa_enabled` option to `true`:

```php config/shopper/auth.php
'2fa_enabled' => env('SHOPPER_ENABLED_TWO_FACTOR', true),
```

You can also control this via your `.env` file:

```env
SHOPPER_ENABLED_TWO_FACTOR=true
```

When this option is set to `false` (the default), the two-factor authentication section will not appear on the account page
and the login flow will not prompt for a second factor even if a user has previously configured it.

## Enabling Two-Factor Authentication

To enable two-step authentication, you'll need first to download an authenticator app to your mobile device.
The app will be able to scan QR codes and retrieve authentication data for you. Recommended authenticator apps:

- [Google Authenticator](https://support.google.com/accounts/answer/1066447)
- [Duo Mobile](https://guide.duo.com/third-party-accounts)
- [Amazon AWS MFA](https://aws.amazon.com/iam/details/mfa)
- [Authenticator](https://www.microsoft.com/store/p/microsoft-authenticator/9nblgggzmcj6)

In addition, you should store the listed recovery codes in a secure password manager such as [1Password](https://1password.com).

When you install an authenticator app, make sure that you follow its instructions carefully.
After your app is successfully downloaded and set up, you can activate the feature in Shopper.

From your administrator interface, click on your name with account picture in the upper right corner. Next click on **Personal Account**

Scroll to the two factor authenticate section on the screen, click **Enable authentication**. This action will trigger a modal to ask you to confirm your password

<Frame>
  <img src="/images/v2/two-factor-section.png" alt="Two factor section Screenshot" />
</Frame>

Enter your current password in the space provided and click **Enable**.

If the user loses access to their mobile device, the login page will allow them to authenticate using one of their recovery codes instead of the temporary token provided by their mobile device's authenticator application.

<Frame>
  <img src="/images/v2/two-factor-code.png" alt="Two factor code Screenshot" />
</Frame>

Now when you try to log in, two-factor authentication will require your mobile device.

## Logging in with Two-Factor Authentication

Go to the Shopper administration login page and enter your email address and password. Click the **Login** button.
The login form will switch to a two-factor challenge, prompting you to enter your authentication code.

If you used a two-factor authentication app, open it and enter the code displayed, then click **Login**.

If you can't access your authenticator app, click **Use a recovery code** and enter one of your saved recovery codes to authenticate.

## Disable Two-Factor Authentication

From your administrator interface, click on your name and your account photo in the upper right corner and click on Personal Account menu.

In the Two-factor authentication section, use the Disable button for the authentication method you want to deactivate. This will ask you for a password confirmation, you enter your password and click on confirm to completely deactivate the Two-factor authentication.

<Frame>
  <img src="/images/v2/two-factor-disable.png" alt="Two factor disable Screenshot" />
</Frame>

## Developer Integration

### Interfaces and Traits

Two-factor authentication is implemented through two focused interfaces (following the Interface Segregation Principle):

**`Shopper\Contracts\HasStoreAuthentication`** — manages the TOTP secret and QR code:
- `getStoreAuthenticationSecret(): ?string`
- `saveStoreAuthenticationSecret(?string $secret): void`
- `getStoreAuthenticationHolderName(): string`
- `getStoreAuthenticationQrCodeSvg(): string`
- `getStoreAuthenticationQrCodeUrl(): string`

**`Shopper\Contracts\HasStoreAuthenticationRecovery`** — manages recovery codes:
- `getStoreAuthenticationRecoveryCodes(): ?array`
- `saveStoreAuthenticationRecoveryCodes(?array $codes): void`
- `replaceStoreAuthenticationRecoveryCode(string $code): void`

The default implementation is provided by two traits:

```php
use Shopper\Contracts\HasStoreAuthentication;
use Shopper\Contracts\HasStoreAuthenticationRecovery;
use Shopper\Traits\InteractsWithStoreAuthentication;
use Shopper\Traits\InteractsWithStoreAuthenticationRecovery;

class User extends Authenticatable implements HasStoreAuthentication, HasStoreAuthenticationRecovery
{
    use InteractsWithStoreAuthentication;
    use InteractsWithStoreAuthenticationRecovery;
}
```

### Database Columns

The following columns are added to the `users` table by Shopper's migrations:

| Column | Type | Description |
|---|---|---|
| `two_factor_secret` | text (nullable) | Encrypted TOTP secret |
| `two_factor_recovery_codes` | text (nullable) | Encrypted JSON array of recovery codes |
| `two_factor_confirmed_at` | timestamp (nullable) | When 2FA was confirmed |
